--- a/app/views/layouts/mailer.html.haml
+++ b/app/views/layouts/mailer.html.haml
@@ -43,7 +43,7 @@
     = yield :email_style
 
   %body{style: "background-color: #fafafa; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;"}
-    %table{border: '0', cellpadding: '0', cellspacing: '0', style: 'margin: 0; padding: 0; padding-top: 25px;', width: '100%'}
+    %table{border: '0', cellpadding: '0', cellspacing: '0', style: 'margin: 0; padding: 25px 0;', width: '100%'}
       %tr
         %td{align: 'center', valign: 'top'}
           %table.100p{width: '640', cellspacing: '0', cellpadding: '0', bgcolor: '#'}
@@ -68,6 +68,7 @@
                 %div{style: 'line-height: 1.4; font-size: 13px;'}
                   Skyderby
                   %br
-                  info@skyderby.ru
+                  %a{href: 'mailto: info@skyderby.ru', style: 'color: #fff; text-decoration: none;'}
+                    info@skyderby.ru
                   %br
                   Russia, Moscow
