Changed expire time for online competitions section to 10 minutes

--- a/app/views/static_pages/_online_competitions_section.html.haml
+++ b/app/views/static_pages/_online_competitions_section.html.haml
@@ -1,4 +1,4 @@
-- cache "online_competitions_summary_#{I18n.locale}", expires_in: 4.hour do
+- cache "online_competitions_summary_#{I18n.locale}", expires_in: 10.minutes do
   - if @online_competitions.many?
     .container.top-buffer
       .row
