--- a/app/assets/stylesheets/_exit_performance.scss
+++ b/app/assets/stylesheets/_exit_performance.scss
@@ -9,13 +9,14 @@
 
 .exit-performance__tracks-container {
   height: 100%;
-  flex-basis: 30%;
+  width: 30%;
   padding: 15px;
+  overflow-y: scroll;
 }
 
 .exit-performance__chart-container {
   height: 100%;
-  flex-basis: 70%;
+  width: 70%;
 }
 
 .exit-performance__tracks-list {
