--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -61,6 +61,11 @@
             = f.radio_button 'rules', 'hungary_boogie'
             Hungary Boogie 
 
+    .form-group{'data-only-hungary-boogie': true}
+      = f.label :number_of_results_for_total, class: 'control-label col-sm-4'
+      .col-sm-8
+        = f.number_field :number_of_results_for_total, class: 'form-control'
+
     .form-group
       = f.label :visibility, class: 'control-label col-sm-4'
       .btn-group.col-sm-8{data: {toggle: 'buttons'}}
