--- a/app/views/events/_form_controls.js.erb
+++ b/app/views/events/_form_controls.js.erb
@@ -1,4 +1,5 @@
-$('input[name="event[starts_at]"]')
+(function() {
+  $('input[name="event[starts_at]"]')
     .datepicker({
       format: 'dd.mm.yyyy',
       startDate: 0,
@@ -7,4 +8,20 @@ $('input[name="event[starts_at]"]')
       todayHighlight: true
     });
 
-Skyderby.helpers.PlaceSelect($('select[name="event[place_id]"]'));
+  Skyderby.helpers.PlaceSelect($('select[name="event[place_id]"]'));
+
+  var on_change_rules = function(input) {
+    if (input.value === 'hungary_boogie') {
+      $('[data-only-hungary-Boogie]').show();
+    } else {
+      $('[data-only-hungary-Boogie]').hide();
+    }
+  }
+
+  on_change_rules($('[name="event[rules]"]:checked')[0]);
+
+  $('[name="event[rules]"]').on('change', function(e) {
+    on_change_rules(e.currentTarget);
+  });
+
+})();
