--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,10 +26,12 @@
 @import "font-awesome";
 
 @import 'variables';
+@import './mixins/**/*';
 @import './*';
 @import './common/**/*';
 @import './blocks/**/*';
 @import './events/**/*';
+@import './suits/**/*';
 @import './tracks/**/*';
 @import './tournaments/**/*';
 
