--- a/app/assets/stylesheets/suits/_index.scss
+++ b/app/assets/stylesheets/suits/_index.scss
@@ -59,9 +59,16 @@
   overflow-y: scroll;
 }
 
+.suits-index__overview-filters {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
 .suits-index__overview-chart {
   width: 100%;
   height: 100%;
+  padding-top: 55px;
 }
 
 .suits-index__list {
