change url in remote actions

--- a/app/views/wingsuits/index.js.erb
+++ b/app/views/wingsuits/index.js.erb
@@ -3,3 +3,9 @@
 <% else %>
   <%= render 'manufacturer_view' %>
 <% end %>
+
+window.history.replaceState(
+  {},
+  document.title,
+  "<%= url_for(index_params).html_safe %>"
+);
