text color for active navbar item

--- a/app/assets/stylesheets/blocks/_navbar.scss
+++ b/app/assets/stylesheets/blocks/_navbar.scss
@@ -39,6 +39,7 @@
   border-bottom-style: solid;
   border-bottom-width: 3px;
   border-bottom-color: rgb(0, 132, 180);
+  color: #333;
 }
 
 li.nav-upload-button {
