--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -9,7 +9,7 @@
   .index-header__text
     = t('static_pages.index.desc')
   .index-header__cta
-    %a.btn.btn-lg.button--green.button--jelly{href: '#', data: {toggle: 'modal', target: '#newTrackModal'}}
+    %a.btn.btn-lg.button--green-gradient.button--shadow{href: '#', data: {toggle: 'modal', target: '#newTrackModal'}}
       %i.fa.fa-upload
       = t('application.header.upload_track')
 
