--- a/app/assets/stylesheets/_content_blocks.scss
+++ b/app/assets/stylesheets/_content_blocks.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
 
   background-color: white;
-  border: rgba(0, 0, 0, 0.14) solid 1px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 2px;
   padding-top: 10px;
   padding-bottom: 10px;
