bordered card for track

--- a/app/views/tracks/globe/show.html.haml
+++ b/app/views/tracks/globe/show.html.haml
@@ -1,6 +1,6 @@
 .container.globe-container
   = render partial: 'tracks/header', locals: {track: @track}
-  .content-block
+  .content-block.content-block--bordered
     .row
       .track-map-wrapper.col-sm-12
         #track-map-loading.text-muted
