--- a/app/views/tracks/maps/show.html.haml
+++ b/app/views/tracks/maps/show.html.haml
@@ -3,7 +3,7 @@
 .track-map-data
   .container
     = render partial: 'tracks/header', locals: {track: @track}
-    .content-block
+    .content-block.content-block--bordered
       .row
         .track-map-wrapper.col-sm-12
           #track-map-loading.text-muted
