--- a/app/views/tracks/_show_track.html.haml
+++ b/app/views/tracks/_show_track.html.haml
@@ -3,7 +3,7 @@
   .container
     = render partial: 'header', locals: {track: @track}
 
-    .content-block
+    .content-block.content-block--bordered
       .card-action
         .dropdown.position-right.settings-button
           = render 'tracks/view_settings_menu', presenter: @track_presenter
