--- a/app/views/tracks/videos/new.html.haml
+++ b/app/views/tracks/videos/new.html.haml
@@ -2,7 +2,7 @@
   .container
     = render partial: 'tracks/header', locals: {track: @track}
 
-    .content-block
+    .content-block.content-block--bordered
       %h2
         = t '.header'
 
