--- a/app/views/tracks/videos/show.html.haml
+++ b/app/views/tracks/videos/show.html.haml
@@ -4,7 +4,7 @@
   .container
     = render partial: 'tracks/header', locals: {track: @track_data.track}
 
-    .content-block
+    .content-block.content-block--bordered
       - if can? :update, @track_data.track
         .card-action
           .position-right
