gracefully handle broken tracks

--- a/app/views/profiles/flight_profiles/_tracks.html.haml
+++ b/app/views/profiles/flight_profiles/_tracks.html.haml
@@ -8,7 +8,7 @@
             %span
               = "##{track.id}"
             %span
-              = track.recorded_at.strftime('%d.%m.%Y')
+              = track.recorded_at&.strftime('%d.%m.%Y')
           %div
             %i.fa.fa-map-marker
             = track_place(track)
