--- a/app/views/tracks/_track.html+mobile.haml
+++ b/app/views/tracks/_track.html+mobile.haml
@@ -22,7 +22,7 @@
   - unless except_columns.include? :place
     .td
       .cell-caption.text-right.text-muted.visible-xs
-        = track.recorded_at.strftime('%d.%m.%Y')
+        = track.recorded_at&.strftime('%d.%m.%Y')
       %div
         = track_place(track)
   .td.text-muted.hidden-xs= track.comment
