--- a/app/views/tracks/_track.html.haml
+++ b/app/views/tracks/_track.html.haml
@@ -29,5 +29,5 @@
         %span.text-info
           &mdash;
 
-  .td.text-info= track.recorded_at.strftime('%d.%m.%Y')
+  .td.text-info= track.recorded_at&.strftime('%d.%m.%Y')
   .td= track_icons(track)
