display data frequency

--- a/app/views/tracks/_show_track.html+mobile.haml
+++ b/app/views/tracks/_show_track.html+mobile.haml
@@ -21,16 +21,4 @@
     
   .track-footer
     %blockquote
-      - if @track.comment.present?
-        %small
-          = @track.comment
-
-      %small
-        - if @track.recorded_at
-          = "Recorded at #{@track.recorded_at.strftime('%d.%m.%Y %H:%M')} (UTC); "
-        = "Uploaded at #{@track.created_at.strftime('%d.%m.%Y %H:%M')} (UTC)"
-
-      - if can?(:update, @track) && @track.track_file
-        %small
-          Download file:
-          = link_to @track.track_file.file_file_name, track_download_path(@track), 'data-turbolinks': false
+      = render 'track_metadata' 
