--- a/app/views/tracks/_separate_charts.js.erb
+++ b/app/views/tracks/_separate_charts.js.erb
@@ -1,7 +1,7 @@
 $('#glideratio_chart').highcharts(<%= render(template: 'charts/glide_ratio_options').html_safe %>);
 $('#glideratio_chart').highcharts().series[0].setData(<%= presenter.glide_ratio_chart_line %>);
 <% if presenter.wind_cancelation? %>
-$('#glideratio_chart').highcharts().series[1].setData(<%= presenter.wind_effect_glide_ratio_chart_line %>);
+  $('#glideratio_chart').highcharts().series[1].setData(<%= presenter.wind_effect_glide_ratio_chart_line %>);
 <% end %>
 
 $('#speeds_chart').highcharts(<%= render(template: 'charts/speeds_chart_options', locals: { speed_units: presenter.speed_units }).html_safe %>);
@@ -9,12 +9,23 @@ $('#speeds_chart').highcharts().series[0].setData(<%= presenter.ground_speed_cha
 $('#speeds_chart').highcharts().series[1].setData(<%= presenter.vertical_speed_chart_line %>, false);
 $('#speeds_chart').highcharts().series[2].setData(<%= presenter.full_speed_chart_line %>);
 <% if presenter.wind_cancelation? %>
-$('#speeds_chart').highcharts().series[3].setData(<%= presenter.wind_effect_speed_chart_line %>);
+  $('#speeds_chart').highcharts().series[3].setData(<%= presenter.wind_effect_speed_chart_line %>);
 <% end %>
 
 $('#elevation_distance_chart').highcharts(<%= render(template: 'charts/elevation_chart_options', locals: {distance_units: presenter.distance_units, altitude_units: presenter.altitude_units }).html_safe %>);
 $('#elevation_distance_chart').highcharts().series[0].setData(<%= presenter.elevation_chart_line %>, false);
 $('#elevation_distance_chart').highcharts().series[1].setData(<%= presenter.distance_chart_line %>, false);
 $('#elevation_distance_chart').highcharts().series[2].setData(<%= presenter.altitude_chart_line %>);
+
+['#glideratio_chart', '#speeds_chart', '#elevation_distance_chart'].forEach(function(container_id) {
+  <% presenter.missing_ranges.each do |range| %>
+    var chart = $(container_id).highcharts();
+    chart.xAxis[0].addPlotBand({
+      from: <%= range[:start] %>,
+      to: <%= range[:end] %>,
+      color: '#FFE5E5'
+    });
+  <% end %>
+});
 
 $('.track-charts__charts-container').on('mousemove touchmove touchstart', Skyderby.helpers.shared_tooltip_handler);
