Made reusable layout for leaderbord

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@
 @import './suits/**/*';
 @import './tracks/**/*';
 @import './tournaments/**/*';
+@import './online_competitions/**/*';
 
 html, body {
   height: 100%;
