Unified templates on start page and online competition for leaders

--- a/app/assets/stylesheets/online_competitions/_leaderbord.scss
+++ b/app/assets/stylesheets/online_competitions/_leaderbord.scss
@@ -7,3 +7,8 @@
   flex-direction: row;
   margin: 20px -15px;
 }
+
+.online-competition-leaderboard--vertical {
+  flex-direction: column;
+  margin: 0 15px;
+}
