--- a/app/views/virtual_competitions/_leaderboard.html.haml
+++ b/app/views/virtual_competitions/_leaderboard.html.haml
@@ -4,4 +4,4 @@
 
 .online-competition-leaderboard{class: orientation_class}
   - leaders.each do |leader_result|
-    = render 'winner', result: leader_result
+    = render 'virtual_competitions/winner', result: leader_result
