--- a/app/views/static_pages/_online_competitions_section.html.haml
+++ b/app/views/static_pages/_online_competitions_section.html.haml
@@ -9,30 +9,10 @@
         .row
           .col-sm-12.text-center
             %h2.light-header= {'base' => 'BASE Challenge', 'skydive' => 'Skydive Challenge'}[activity]
-        .row
+        .leaderboard-stack
           - competitions.each do |competition|
-            .col-sm-4
-              .start-page-competition
-                .start-page-competition-header.text-center
-                  = link_to competition.name, virtual_competition_path(competition)
-                .competition-results
-                  - competition.personal_top_scores.first(3).each do |competition_leader|
-                    - place_class = [:gold_place, :silver_place, :bronze_place][competition_leader.rank - 1]
-                    .row.start-page-competition-result{class: place_class}
-                      - profile = competition_leader.profile
-                      .col-sm-4
-                        = image_tag(profile.userpic.url(:medium), 
-                                    class: 'img-responsive img-circle')
-                      .col-sm-8
-                        = link_to profile.name.titleize,
-                                  profile_path(profile),
-                                  class: 'vc-profile-name',
-                                  'data-toggle' => 'tooltip',
-                                  title: t('virtual_competitions.show.show_profile')
-                        %div
-                          = link_to track_path(competition_leader.track),
-                                    class: 'vc-result-link',
-                                    'data-toggle' => 'tooltip',
-                                    title: t('virtual_competitions.show.show_details') do
-                            %span.vc-result= format_result(competition_leader.result, competition)
-                            %span.vc-unit= competition_unit(competition)
+            .leaderboard-stack__panel
+              .leaderboard-stack__panel-header
+                = link_to competition.name, virtual_competition_path(competition)
+              - leaders = competition.personal_top_scores.first(3)
+              = render 'virtual_competitions/leaderboard', leaders: leaders, orientation: :vertical
